--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">	
+	<head>
+		<meta charset="utf-8">	
+	</head>
+
 	<body>
 	<p>Welcome to The Chat App</p>
+		<script src="/socket.io/socket.io.js"></script>
+		<script>
+			var socket = io();
+			socket.on('connect', () => {
+				console.log('Connected to Server');
+			});
+			
+			socket.on('disconnect', () => {
+				console.log('Disconnected from Server');
+			});
+			
+		</script>
 	</body>
 </html>
