--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,13 @@
 
 	<body>
 	<p>Welcome to The Chat App</p>
+		<ol id="messages"></ol>
+		<form id="message-form">
+			<input name="message" type="text" placeholder="Enter Message"/>
+			<button>Send It</button>
+		</form>
 		<script src="/socket.io/socket.io.js"></script>
+		<script src="js/libs/jquery-3.3.1.min.js"></script>
 		<script src="/js/index.js"></script>
 	</body>
 </html>
