--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 			<input name="message" type="text" placeholder="Enter Message"/>
 			<button>Send It</button>
 		</form>
+		<button id="send-location">Drop a Pin</button>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="js/libs/jquery-3.3.1.min.js"></script>
 		<script src="/js/index.js"></script>
