--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,32 @@
 <html>
 	<head>
 		<meta charset="utf-8">	
+		<link rel="stylesheet" href="/css/styles.css">
+	
 	</head>
+	
+	<body class="chat">
+	
+		<div class="chat__sidebar">
+			<h3>People</h3>
+			<div id="users"></div>
+		</div>
+	
+		<div class="chat__main">
+			<ol id="messages" class="chat__messages"></ol>
+			
+			<div class="chat__footer">
+				<form id="message-form">
+					<input name="message" type="text" placeholder="Enter Message" autofocus autocomplete="off"/>
+					<button>Send</button>
+				</form>
+				<button id="send-location">Drop a Pin</button>
+			</div>
+		</div>
 
-	<body>
-	<p>Welcome to The Chat App</p>
-		<ol id="messages"></ol>
-		<form id="message-form">
-			<input name="message" type="text" placeholder="Enter Message"/>
-			<button>Send It</button>
-		</form>
-		<button id="send-location">Drop a Pin</button>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="js/libs/jquery-3.3.1.min.js"></script>
 		<script src="/js/index.js"></script>
+		
 	</body>
 </html>
